--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -3,9 +3,9 @@ title: 'Reproducible Research: Peer Assessment 1'
 author: "Daniel Robinett"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output:
-  html_document: default
-  pdf_document: default
-  word_document: default
+  md_document: default
+  html_document:
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -34,7 +34,7 @@ The dataset is stored in a comma-separated-value (CSV) file and there are a tota
 ## Loading and preprocessing the data
 Unzip data to obtain a csv file.
 
-```{r}
+```{r Installing Package and obtain Data} 
 library("data.table")
 library(ggplot2)
 fileUrl <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
@@ -43,7 +43,7 @@ unzip("repdata%2Fdata%2Factivity.zip",exdir = "data")
 ```
 
 ## Reading csv Data into Data.Table. 
-```{r}
+```{r Read into Data Table}
 activity_DT <- data.table::fread(input = "data/activity.csv")
 ```
 
@@ -51,21 +51,21 @@ activity_DT <- data.table::fread(input = "data/activity.csv")
 
 1. Calculate the total number of steps taken per day
 
-```{r}
+```{r Calculate Total Steps}
 Total_Steps_Day <- activity_DT[, c(lapply(.SD, sum, na.rm = FALSE)), .SDcols = c("steps"), by = .(date)] 
 head(Total_Steps_Day, 10)
 ```
 
 2. If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day. 
 
-```{r}
+```{r Create Histogram}
 ggplot(Total_Steps_Day, aes(x = steps)) +
   geom_histogram(fill = "red", binwidth = 500) +
   labs(title = "Daily Steps", x = "Steps", y = "Frequency")
 ```
 
 3. Calculate and report the mean and median of the total number of steps taken per day
-```{r}
+```{r Calculate mean and median of steps}
 Total_Steps_Day[, .(Mean_Steps = mean(steps, na.rm = TRUE), Median_Steps = median(steps, na.rm = TRUE))]
 ```
 
@@ -73,14 +73,14 @@ Total_Steps_Day[, .(Mean_Steps = mean(steps, na.rm = TRUE), Median_Steps = media
 
 1. Make a time series plot (i.e. type = "1") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 
-```{r}
+```{r Calculate 5 minute interval steps}
 IntervalDT <- activity_DT[, c(lapply(.SD, mean, na.rm = TRUE)), .SDcols = c("steps"), by = .(interval)] 
 ggplot(IntervalDT, aes(x = interval , y = steps)) + geom_line(color="orange", size=1) + labs(title = "Avg. Daily Steps", x = "Interval", y = "Avg. Steps per day")
 ```
 
 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
   
-```{r}
+```{r Calculate max steps per interval}
 IntervalDT[steps == max(steps), .(max_interval = interval)]
 ```
 
@@ -89,7 +89,7 @@ IntervalDT[steps == max(steps), .(max_interval = interval)]
 
 1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with ????????s)
 
-```{r}
+```{r Impute missing values}
 activity_DT[is.na(steps), .N ]
 # alternative solution
 nrow(activity_DT[is.na(steps),])
@@ -97,20 +97,20 @@ nrow(activity_DT[is.na(steps),])
 
 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
 
-```{r}
+```{r Fill in median for missing steps}
 # Filling in missing values with median of dataset. 
 activity_DT[is.na(steps), "steps"] <- activity_DT[, c(lapply(.SD, median, na.rm = TRUE)), .SDcols = c("steps")]
 ```
 
 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
 
-```{r}
+```{r Read new dataset into data table}
 data.table::fwrite(x = activity_DT, file = "data/tidyData.csv", quote = FALSE)
 ```
 
 4. Make a histogram of the total number of steps taken each day and calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
   
-  ```{r}
+```{r Total Steps per day, median and visual}
 # total number of steps taken per day
 Total_Steps_Day <- activity_DT[, c(lapply(.SD, sum)), .SDcols = c("steps"), by = .(date)] 
 # mean and median total number of steps taken per day
@@ -127,7 +127,7 @@ Second Part (fillin in na with median) | 9354.23 | 10395
 
 1. Create a new factor variable in the dataset with two levels - "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
 
-```{r}
+```{r Compare weekdays to weekends}
 # Just recreating activity_DT from scratch then making the new factor variable. (No need to, just want to be clear on what the entire process is.) 
 activity_DT <- data.table::fread(input = "data/activity.csv")
 activity_DT[, date := as.POSIXct(date, format = "%Y-%m-%d")]
@@ -140,7 +140,7 @@ head(activity_DT, 10)
 
 2. Make a panel plot containing a time series plot (i.e. type=1) of the 5 minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
 
-```{r}
+```{r Weekday to weekend visual}
 activity_DT[is.na(steps), "steps"] <- activity_DT[, c(lapply(.SD, median, na.rm = TRUE)), .SDcols = c("steps")]
 IntervalDT <- activity_DT[, c(lapply(.SD, mean, na.rm = TRUE)), .SDcols = c("steps"), by = .(interval, `weekday or weekend`)] 
 ggplot(IntervalDT , aes(x = interval , y = steps, color=`weekday or weekend`)) + geom_line() + labs(title = "Average Daily Steps by Weektype", x = "Interval", y = "No. of Steps") + facet_wrap(~`weekday or weekend` , ncol = 1, nrow=2)
